# etawatch

./: README.md  how-to-release.md  pyproject.toml
.github/workflows/: release.yml  test-release.yml
src/etawatch/: __init__.py  __main__.py  etawatch.py
