[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "etawatch"
dynamic = ["version"]
authors = [
    {name = "Rick D. Gray", email = "rickdgray@outlook.com"},
]
description = "Like a stopwatch, but it also gives you an ETA"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities"
]

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project.urls]
Homepage = "https://github.com/rickdgray/etawatch"
